GNOME Bugzilla – Bug 744692
Closed signal on notification prompt isn't handled
Last modified: 2015-02-18 09:42:25 UTC
Created attachment 297077 [details] [review] handle closed signal properly on notification prompt When the notification is closed (e.g. by close button), closed signal is emitted. This signal isn't handled currently and therefore vino-server is still waiting for response and block new notification from client (also doesn't close the connection). So if you close the notification by mistake, you are not able to establish connection again until vino-server is restarted. Downstream bugreport: https://bugzilla.redhat.com/show_bug.cgi?id=1192548
Review of attachment 297077 [details] [review]: Looks fine, please push to master and gnome-3-14 after fixing the typo in the commit message ("therefor").
Review of attachment 297077 [details] [review]: Thanks for the review! The patch with fixed commit messages was pushed to master and gnome-3-14 as: commit aec3afbd79d0e21a8b2a7e47bea2fd46d0f8cad5 commit 5f8383f41cbcd7e9563ef67cf4a68e57f3f45b9c