Handle closed signal properly on notification prompt

When the notification is closed (e.g. by close button), closed signal
is emitted. This signal isn't handled currently and therefore
vino-server is still waiting for response and block new notification
from client (also doesn't close the connection). Handle close signal
properly to fix this bug.

https://bugzilla.gnome.org/show_bug.cgi?id=744692